# dishwasher_perception

./: .gitmodules  README.md
docker/: compose.yml  compose_deploy.yml
iki_tiago_bringup/: CMakeLists.txt  package.xml
iki_tiago_bringup/components/astra2/: astra2.yaml  grasp_pose_detection.yaml
iki_tiago_bringup/components/audio/: audio_capture.yaml
iki_tiago_bringup/components/core/: file_server.yaml  open_door_detector.yaml
iki_tiago_bringup/components/femto_mega/: femto_mega.yaml  yeet_to_3d.yaml
iki_tiago_bringup/config/: audio.yaml  environment_manager.yaml
iki_tiago_bringup/config/core/: stt.yaml  tts.yaml
iki_tiago_bringup/config/cyclonedds/: cyclonedds.xml
iki_tiago_bringup/config/iki_robot/: real.yaml  sim.yaml
iki_tiago_bringup/config/joy/: radial_menu.yaml  steamdeck_joy_teleop.yaml  twist_mux_topics.yaml
iki_tiago_bringup/config/manipulation/: moveit_wrapper.yaml
iki_tiago_bringup/config/navigation/: 90_nav_doors.yaml  92_nav_restaurant.yaml  98_nav.yaml  sim.yaml
iki_tiago_bringup/config/perception/: gpd.cfg  grasp_pose_detection.yaml  open_door_detector.yaml
iki_tiago_bringup/config/robot/: 90_laser_filters.yaml  gripper_controller.yaml
iki_tiago_bringup/config/rviz/: advanced_navigation.rviz  config_panel.yaml  mapping.rviz  moveit.rviz  nav2.rviz  tasks.rviz  tiago.rviz  urdf_viewer.rviz
iki_tiago_bringup/config/sensors/: astra2.yaml  femto_bolt.yaml  femto_mega.yaml  gemini.yaml
iki_tiago_bringup/launch/: audio_test.launch.py  container.launch.py  environment_manager.launch.py  iki_robot.launch.py  urdf_viewer.launch.py
(+55 files in other folders)
